<resources>
    <string name="app_name">Cloud Bank</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="save_credentials">Save Username</string>
    <string name="login_button">Log in</string>
    <string name="logout">Logout</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="label">Label</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="reference">Reference</string>
    <string name="balance">Balance</string>
    <string name="select_option">Select an option below</string>
    <string name="welcome">Welcome to Bank App</string>
    <string name="transactions">Transactions</string>
    <string name="view_recent_transactions">View your recent transactions</string>
    <string name="agencies">Agencies</string>
    <string name="view_agencies">View and search for agencies</string>
    <string name="search_agencies_hint">Search agencies...</string>
    <string name="call_button">Call</string>
    <string name="sms_button">SMS</string>
    <string name="email_button">Email</string>
    <string name="welcome_text">Welcome to Bank App</string>
</resources>